backport: re PR target/36780 (Wrong reload generated for subreg address on SH)

Backport from mainline:
	PR target/36780
	* config/sh/sh.h (GO_IF_LEGITIMATE_ADDRESS): Allow
	(plus (plus (reg) (const_int)) (const_int)) when reload_in_progress.

From-SVN: r137839